finished all tasks, i want to do a final review and improve the track playing tag to look more integrated

--- a/views/albums.hbs
+++ b/views/albums.hbs
@@ -2,8 +2,8 @@
     <h2 id="result-text">Here are the results for your artist search:</h2>
 </div>
 <div class="artists">
-    {{#each artistDetails}}
-        {{> artistPartial this}} 
+    {{#each albumDetails}}
+        {{> albumPartial this}} 
     {{else}}
         <p>No items yet!</p>
     {{/each}}
