--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
     left: 30%;
 }
 
-.search-box > input,button {
+.search-box > input,.button {
     margin: 10px;
     padding: 8px;
 }
@@ -29,8 +29,52 @@ body {
     border-color: rgb(221, 218, 218);
 }
 
-.search-box > button {
+.search-box > .button {
     background-color: rgb(246, 79, 80);
     color: rgb(255, 255, 255);
     border: none;
+}
+
+.card img {
+    height: 200px;
+    object-fit: cover;
+  }
+
+
+  .artists {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .card {
+    padding: 15px;
+    margin: 15px;
+    height: 350px;
+    background-color: rgb(255, 255, 255);
+  }
+
+  button.button {
+  background-color: rgb(246, 79, 80);
+  color: rgb(255, 255, 255);
+  border: none;
+}
+
+#result-text {
+    color: white;
+}
+
+.track-title {
+
+}
+.trackcard {
+    background-color: rgb(182, 178, 178);
+    margin: 5px;
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+}
+
+.tracks {
+    display: flex;
+    flex-direction: column;
 }
