--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,6 +40,12 @@ body {
     object-fit: cover;
   }
 
+.card-title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 150px;
+}
 
   .artists {
     display: flex;
